@startuml
package "Playground" {
  entity accounts {
    * account_id: VARCHAR(26)
    --
    * account_name: TEXT
    * password: TEXT
  }

  entity projects {
    * project_id: VARCHAR(26)
    --
    * project_name: TEXT
  }

  entity project_account_participations {
    * project_id: VARCHAR(26)
    * account_id: VARCHAR(26)
    --
  }

  accounts ||--o{ project_account_participations
  projects ||--|{ project_account_participations

  entity tasks {
    * task_id: VARCHAR(26)
    * project_id: VARCHAR(26)
    --
    * task_name: TEXT
    * status: TEXT
    * index: INTEGER
  }

  projects ||--o{ tasks

  entity task_account_assignments {
    * task_id: VARCHAR(26)
    * account_id: VARCHAR(26)
    --
  }

  accounts ||--o{ task_account_assignments: "1" - "0..10"
  tasks ||--o{ task_account_assignments

  entity deadlines {
    task_id: VARCHAR(26)
    due_date: TIMESTAMP
    postpone_count: INTEGER
    max_postpone_count: INTEGER
  }

  tasks ||--|| deadlines
}
@enduml
